syntax = "proto3";

package linky;

import "google/protobuf/any.proto";


option java_package = "org.superhx.linky.service.proto";
option java_multiple_files = true;
option java_outer_classname = "BatchRecordProto";

message BatchRecord {
    int32 topicId = 1;
    int32 partition = 2;
    int32 segmentIndex = 3;
    int64 firstOffset = 4;
    int64 storeTimestamp = 5;
    repeated Record records = 6;
}

message Record {
    string key = 1;
    bytes value = 2;
    map<string, string> headers = 3;
}